--- a/interfaces/IncomingServiceMessage.html
+++ b/interfaces/IncomingServiceMessage.html
@@ -27,7 +27,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">IncomingServiceMessage</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/bb1a695/src/lib/messages.ts#L48">lib/messages.ts:48</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/ab77718/src/lib/messages.ts#L48">lib/messages.ts:48</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -53,7 +53,7 @@
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from ServiceMessageBase.content</p>
 <ul>
-<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/bb1a695/src/lib/messages.ts#L15">lib/messages.ts:15</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/ab77718/src/lib/messages.ts#L15">lib/messages.ts:15</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="contentType" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>content<wbr/>Type</span><a href="#contentType" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">content<wbr/>Type</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -62,7 +62,7 @@
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from ServiceMessageBase.contentType</p>
 <ul>
-<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/bb1a695/src/lib/messages.ts#L10">lib/messages.ts:10</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/ab77718/src/lib/messages.ts#L10">lib/messages.ts:10</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="creationDate" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>creation<wbr/>Date</span><a href="#creationDate" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">creation<wbr/>Date</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">Date</span></div>
@@ -71,7 +71,7 @@
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from ServiceMessageExtra.creationDate</p>
 <ul>
-<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/bb1a695/src/lib/messages.ts#L32">lib/messages.ts:32</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/ab77718/src/lib/messages.ts#L32">lib/messages.ts:32</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="expiryDate" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>expiry<wbr/>Date</span><a href="#expiryDate" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">expiry<wbr/>Date</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">Date</span></div>
@@ -80,7 +80,7 @@
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from ServiceMessageExtra.expiryDate</p>
 <ul>
-<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/bb1a695/src/lib/messages.ts#L37">lib/messages.ts:37</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/ab77718/src/lib/messages.ts#L37">lib/messages.ts:37</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="parcelId" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>parcel<wbr/>Id</span><a href="#parcelId" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">parcel<wbr/>Id</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -89,7 +89,7 @@
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from ServiceMessageExtra.parcelId</p>
 <ul>
-<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/bb1a695/src/lib/messages.ts#L27">lib/messages.ts:27</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/ab77718/src/lib/messages.ts#L27">lib/messages.ts:27</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="recipientId" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>recipient<wbr/>Id</span><a href="#recipientId" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">recipient<wbr/>Id</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -98,7 +98,7 @@
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from ServiceMessageBase.recipientId</p>
 <ul>
-<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/bb1a695/src/lib/messages.ts#L5">lib/messages.ts:5</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/ab77718/src/lib/messages.ts#L5">lib/messages.ts:5</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="senderId" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>sender<wbr/>Id</span><a href="#senderId" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">sender<wbr/>Id</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -107,7 +107,7 @@
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from ServiceMessageExtra.senderId</p>
 <ul>
-<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/bb1a695/src/lib/messages.ts#L22">lib/messages.ts:22</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/relaycorp/awala-endpoint-internet-js/blob/ab77718/src/lib/messages.ts#L22">lib/messages.ts:22</a></li></ul></aside></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -137,6 +137,8 @@
 <ul class="tsd-small-nested-navigation">
 <li><a href="IncomingServiceMessage.html" class="current"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-256"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-interface)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.51 16V15.016H11.298V8.224H9.51V7.24H14.19V8.224H12.402V15.016H14.19V16H9.51Z" fill="var(--color-text)"></path></g></svg><span>Incoming<wbr/>Service<wbr/>Message</span></a></li>
 <li><a href="OutgoingServiceMessage.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Outgoing<wbr/>Service<wbr/>Message</span></a></li>
+<li><a href="../variables/INCOMING_SERVICE_MESSAGE_TYPE.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-32"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-variable)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M11.106 16L8.85 7.24H9.966L11.454 13.192C11.558 13.608 11.646 13.996 11.718 14.356C11.79 14.708 11.842 14.976 11.874 15.16C11.906 14.976 11.954 14.708 12.018 14.356C12.09 13.996 12.178 13.608 12.282 13.192L13.758 7.24H14.85L12.582 16H11.106Z" fill="var(--color-text)"></path></g></svg><span>INCOMING_<wbr/>SERVICE_<wbr/>MESSAGE_<wbr/>TYPE</span></a></li>
+<li><a href="../variables/OUTGOING_SERVICE_MESSAGE_TYPE.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-32"></use></svg><span>OUTGOING_<wbr/>SERVICE_<wbr/>MESSAGE_<wbr/>TYPE</span></a></li>
 <li><a href="../functions/makeIncomingServiceMessage.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>make<wbr/>Incoming<wbr/>Service<wbr/>Message</span></a></li>
 <li><a href="../functions/makeOutgoingCloudEvent.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>make<wbr/>Outgoing<wbr/>Cloud<wbr/>Event</span></a></li></ul></nav></div></div></div>
 <div class="tsd-generator">
